Load color extension for Mathjax

--- a/lecture/mathjax_config.html
+++ b/lecture/mathjax_config.html
@@ -1,6 +1,7 @@
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
   TeX: {
+    extensions: ["color.js"],
     Macros: {
       bx: "{\\boldsymbol{x}}",
       by: "{\\boldsymbol{y}}",
@@ -16,3 +17,4 @@ MathJax.Hub.Config({
 </script>
 
 $$\newcommand{\bm}[1]{\boldsymbol{#1}}$$
+$$\definecolor{lava}{rgb}{0.81, 0.06, 0.13}$$
