Describe how to deal with ill-conditioned matrix

--- a/lecture/mathjax_config.html
+++ b/lecture/mathjax_config.html
@@ -10,6 +10,8 @@ MathJax.Hub.Config({
       bdelta: "{\\boldsymbol{\\delta}}",
       bSigma: "{\\boldsymbol{\\Sigma}}",
       given: "{\\, | \\,}",
+      eqDistribution: "{\\overset{\\small \\textrm{d}}{=}}",
+      iid: "{\\mathbin{\\overset{\\small \\textrm{i.i.d.}}{\\sim}}}",
       normalDist: "{\\mathcal{N}}"
     }
   }
