--- a/lecture/mathjax_config.html
+++ b/lecture/mathjax_config.html
@@ -18,5 +18,7 @@ MathJax.Hub.Config({
 });
 </script>
 
-$$\newcommand{\bm}[1]{\boldsymbol{#1}}$$
-$$\definecolor{lava}{rgb}{0.81, 0.06, 0.13}$$
+<span style="display: none;">
+  $$\newcommand{\bm}[1]{\boldsymbol{#1}}$$
+  $$\definecolor{lava}{rgb}{0.81, 0.06, 0.13}$$
+</span>
