Define macro for independence symbol

--- a/lecture/mathjax_config.html
+++ b/lecture/mathjax_config.html
@@ -20,5 +20,6 @@ MathJax.Hub.Config({
 
 <span style="display: none;">
   $$\newcommand{\bm}[1]{\boldsymbol{#1}}$$
+  $$\newcommand{\indep}{\mathrel{\unicode{x2AEB}}}$$
   $$\definecolor{lava}{rgb}{0.81, 0.06, 0.13}$$
 </span>
